update HTML met nieuwe veranderingen

--- a/afbeeldingen.html
+++ b/afbeeldingen.html
@@ -88,7 +88,7 @@
 <footer class="bg-[var(--panel)] p-5 text-center text-sm">
   <p>
     Laatst gepubliceerde versie op Github:
-    <a href="https://github.com/jouw-gebruikersnaam/repo" target="_blank">Github-link</a>
+ <a href="https://github.com/lottecharle/ontwerpdocumentatie1GDM1" target="_blank" class="underline">Github-link</a>
   </p>
 </footer>
 
