update pdf bestand naar nieuwe versie

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
       </div>
 
       <div class="download">
-        <a href="pdf.zip" download>Download ontwerpdocumentatie (PDF)</a>
+        <a href="pdf/Ontwerpdocumentatie.pdf.zip" download>Download ontwerpdocumentatie (PDF)</a>
       </div>
     </div>
 
